--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,8 @@ project(lang)
 set(CMAKE_CXX_FLAGS "-I/usr/lib/llvm-10/include -std=c++14 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -DLLVM_DISABLE_ABI_BREAKING_CHECKS_ENFORCING=1")
 set(CMAKE_EXE_LINKER_FLAGS "-L/usr/lib/llvm-10/lib -lLLVM-10")
 
-file(GLOB src
-        src/*.cpp
-        )
+file(GLOB src src/*.cpp)
 
-include_directories(
-        ${PROJECT_SOURCE_DIR}/src
-)
+include_directories(${PROJECT_SOURCE_DIR}/src)
 
-add_executable(lang ${src} src/ExprParser.cpp)
+add_executable(lang ${src})
