--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,10 @@ else ()
     llvm_map_components_to_libnames(llvm_libs support core irreader)
     message(STATUS "libs: ${llvm_libs}")
 
-    target_link_libraries(lang ${llvm_libs})
+    #target_link_libraries(lang ${llvm_libs})
+    target_link_libraries(lang LLVM-13)
+
+    target_link_libraries(lang stdc++fs)
 endif()
 
 
