--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ else ()
     message(STATUS "inc: ${LLVM_INCLUDE_DIRS}")
     include_directories(${LLVM_INCLUDE_DIRS})
 
-    llvm_map_components_to_libnames(llvm_libs support core irreader)
-    message(STATUS "libs: ${llvm_libs}")
+    #llvm_map_components_to_libnames(llvm_libs support core irreader)
+    #message(STATUS "libs: ${llvm_libs}")
 
     #target_link_libraries(lang ${llvm_libs})
     target_link_libraries(lang LLVM-13)
