break stmt,alloc order

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,15 @@
         "thread": "cpp",
         "unordered_set": "cpp",
         "*.def": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "cassert": "cpp",
+        "cerrno": "cpp",
+        "ciso646": "cpp",
+        "climits": "cpp",
+        "filesystem": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
