fix cycles, more resolver

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,11 @@
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
+                },
+                {
+                    "description": "Disable target async",
+                    "text": "set target-async off",
+                    "ignoreFailures": true
                 }
             ]
         }
