finish migration to llvm-16

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.12)
 
 project(lang)
 
-set(CMAKE_CXX_FLAGS "-std=c++2a -g -pg -opaque-pointers=0")
+set(CMAKE_CXX_FLAGS "-std=c++2a -g -pg")
 
 file(GLOB src src/*.cpp src/parser/*.cpp)
 
@@ -16,14 +16,9 @@ else ()
     find_package(LLVM REQUIRED CONFIG)
     message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
     message(STATUS "inc: ${LLVM_INCLUDE_DIRS}")
+
     include_directories(${LLVM_INCLUDE_DIRS})
-
-    #llvm_map_components_to_libnames(llvm_libs support core irreader)
-    #message(STATUS "libs: ${llvm_libs}")
-
-    #target_link_libraries(lang ${llvm_libs})
     target_link_libraries(lang LLVM-16)
-
     target_link_libraries(lang stdc++fs)
 endif()
 
