--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
         "compare": "cpp",
         "concepts": "cpp",
         "set": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "format": "cpp"
     },
     "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json",
     "cmake.ignoreCMakeListsMissing": true
