--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: myname
-        run: ls
+        run: |
+          ls && cd bin
+          wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh
+          ./llvm.sh 19
+          bash cpp_bridge/x.sh
+          x86-64/x-x64 bt x2-x64
