--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
         run: |
           ls && cd bin
           wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh
-          ./llvm.sh 19
+          sudo ./llvm.sh 19
           bash cpp_bridge/x.sh
           x86-64/x-x64 bt x2-x64
