--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: myname
         run: |
           ls
-          bash cpp_bridge/x.sh
+          : #bash cpp_bridge/x.sh
           cd bin
           : # wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo  ./llvm.sh 19
           x86-64/x-x64 bt x2-x64
