--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,14 @@ jobs:
           mkdir build
           wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo  ./llvm.sh 19
           bin/x86-64/x bt x2-x64 -root .
-          make_toolchain.sh build/x2-x64 . -zip
+          bin/make_toolchain.sh build/x2-x64 . -zip
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: dist
           path: |
-              x-toolchain-x64
+              x-toolchain-x64.zip
 
       - name: "test gh"
         run: |
