--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
           # cd bin
           mkdir build
           wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo  ./llvm.sh 19
-          bin/x86-64/x bt x2-x64 -root .
+          #bin/x86-64/x bt x2-x64 -root .
+          bin/build.sh bin/x86-64/x
           bin/make_toolchain.sh build/x2-x64 . -zip
 
       - name: Upload Artifacts
