--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,6 @@ jobs:
         run: |
           echo "Testing GitHub Actions"
           gh auth status
+          gh release download toolchain
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
