--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: toolchain
-          path: x-toolchain-$new_version-x86_64.zip
+          path: x-toolchain-${{ env.new_version }}-x86_64.zip
 
       - name: Create Release
         if: ${{ env.new_version != env.last_version }}
@@ -49,6 +49,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: x-toolchain-$new_version-x86_64.zip
-          asset_name: x-toolchain-$new_version-x86_64.zip
+          asset_path: x-toolchain-${{ env.new_version }}-x86_64.zip
+          asset_name: x-toolchain-${{ env.new_version }}-x86_64.zip
           asset_content_type: application/zip
