--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on: [push]
 
 env: 
   last_version: '1.01'
-  new_version: '1.01'
+  new_version: '1.02'
 
 jobs:
   build:
@@ -47,6 +47,7 @@ jobs:
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
+        if: ${{ env.new_version != env.last_version }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: x-toolchain-${{ env.new_version }}-x86_64.zip
