--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,9 +1,10 @@
 FROM arm64v8/ubuntu:focal
 
 COPY .. /home
-#COPY ./x-toolchain-1.00-aarch64 /home/lang
+COPY ../x-toolchain-1.00-aarch64 /home/lang
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update
+RUN uname -m
+RUN ./build.sh ../x-toolchain-1.00-aarch64 v2
 
