--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,10 +1,11 @@
 FROM arm64v8/ubuntu:focal
 
-COPY .. /home
-COPY ../x-toolchain-1.00-aarch64 /home/lang
+COPY . /home/lang
+#COPY ../x-toolchain-1.00-aarch64/ /home/lang/
 
-ARG DEBIAN_FRONTEND=noninteractive
+#ARG DEBIAN_FRONTEND=noninteractive
 
 RUN uname -m
-RUN ./build.sh ../x-toolchain-1.00-aarch64 v2
+RUN cd /home/lang
+RUN ./bin/build.sh ./x-toolchain-1.00-aarch64 v-arm64
 
