--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,11 @@ jobs:
           path: x-toolchain-${{ env.new_version }}-x86_64.zip
 
       - name: arm64 build
+      - uses: actions/checkout@v4
         run: |
           unzip $toolchain_arm64_dir.zip
           #docker build -t cross -f ./bin/Dockerfile . --platform=linux/arm64
-          bin/cross.sh $toolchain_dir $toolchain_arm64_dir
+          ls&&bin/cross.sh $toolchain_dir $toolchain_arm64_dir
 
       - name: Create Release
         if: ${{ env.new_version != env.last_version }}
