--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
           name: toolchain
           path: x-toolchain-${{ env.new_version }}-x86_64.zip
 
+      - uses: actions/checkout@v4
       - name: arm64 build
-        uses: actions/checkout@v4
         run: |
           unzip $toolchain_arm64_dir.zip
           #docker build -t cross -f ./bin/Dockerfile . --platform=linux/arm64
