--- a/bin/Dockerfile-cross
+++ b/bin/Dockerfile-cross
@@ -6,6 +6,6 @@ COPY . /home/lang
 #ARG DEBIAN_FRONTEND=noninteractive
 
 RUN uname -m
-RUN cd /home/lang
+RUN ls && cd /home/lang && ls
 RUN ./bin/cross.sh ./x-toolchain-1.00-x86_64./x-toolchain-1.00-aarch64
 
