--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           unzip $toolchain_arm64_dir.zip
           #bin/cross.sh $toolchain_dir $toolchain_arm64_dir
-          docker build -t cross -f ./bin/Dockerfile-cross .
+          ./bin/docker.sh
 
       - name: Create Release
         if: ${{ env.new_version != env.last_version }}
