--- a/bin/Dockerfile-cross
+++ b/bin/Dockerfile-cross
@@ -1,10 +1,17 @@
-FROM debian:sid
+ARG version1="1.00"
+ARG version="1.01"
+ARG host_tool="./x-toolchain-1.00-x86_64"
+ARG target_tool="./x-toolchain-1.00-aarch64"
 
-COPY . /home/lang
-#COPY ../x-toolchain-1.00-aarch64/ /home/lang/
+FROM debian:sid AS build
 
 #ARG DEBIAN_FRONTEND=noninteractive
 
+COPY . /home/lang
+
 RUN uname -m
 WORKDIR /home/lang
-RUN ./bin/cross.sh ./x-toolchain-1.00-x86_64 ./x-toolchain-1.00-aarch64
+RUN rm -rf ./build
+#RUN ./bin/cross.sh ${host_tool} ${target_tool} ${version2}>>log.txt
+RUN ./bin/cross2.sh>>log.txt
+#COPY ./x-toolchain-1.01-aarch64.zip .
