--- a/bin/Dockerfile-cross
+++ b/bin/Dockerfile-cross
@@ -5,7 +5,7 @@ ARG target_tool="./x-toolchain-1.00-aarch64"
 
 FROM debian:sid AS build
 
-#ARG DEBIAN_FRONTEND=noninteractive
+ARG DEBIAN_FRONTEND=noninteractive
 
 COPY . /home/lang
 
@@ -14,4 +14,5 @@ WORKDIR /home/lang
 RUN rm -rf ./build
 #RUN ./bin/cross.sh ${host_tool} ${target_tool} ${version2}>>log.txt
 RUN ./bin/cross2.sh>>log.txt
+RUN cat log.txt
 #COPY ./x-toolchain-1.01-aarch64.zip .
