--- a/bin/Dockerfile-cross
+++ b/bin/Dockerfile-cross
@@ -1,9 +1,9 @@
-ARG version1="1.00"
-ARG version="1.01"
+FROM debian:sid AS build
+
+ARG version
 ARG host_tool="./x-toolchain-1.00-x86_64"
 ARG target_tool="./x-toolchain-1.00-aarch64"
 
-FROM debian:sid AS build
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -12,7 +12,7 @@ COPY . /home/lang
 RUN uname -m
 WORKDIR /home/lang
 RUN rm -rf ./build
-#RUN ./bin/cross.sh ${host_tool} ${target_tool} ${version2}>>log.txt
-RUN ./bin/cross2.sh
+RUN ./bin/cross.sh $host_tool ${target_tool} ${version}>>log.txt
+#RUN ./bin/cross2.sh
 #RUN cat log.txt
 #COPY ./x-toolchain-1.01-aarch64.zip .
