--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         run: |
           echo "toolchain_dir=x-toolchain-${last_version}-$(uname -m)" >> "$GITHUB_ENV"
           echo "toolchain_arm64_dir=x-toolchain-${last_version}-aarch64" >> "$GITHUB_ENV"
+          echo "tool_x86_64_zip=x-toolchain-${new_version}-x86_64.zip >> $GITHUB_ENV"
+          echo "tool_arm64_zip=x-toolchain-${new_version}-aarch64.zip >> $GITHUB_ENV"
 
       - uses: actions/checkout@v4
       - name: "download toolchain"
@@ -24,8 +26,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: bootstrap
-        id: bootstrap
+      - name: build-x86_64
         if: true
         run: |
           bin/build.sh $toolchain_dir $new_version
@@ -35,13 +36,12 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: toolchain-x86_64
-          path: x-toolchain-${{ env.new_version }}-x86_64.zip
+          path: tool_x86_64_zip
 
-      - name: arm64 build
+      - name: build-arm64
         if: true
         run: |
           unzip $toolchain_arm64_dir.zip
-          #bin/cross.sh $toolchain_dir $toolchain_arm64_dir
           ./bin/docker.sh $toolchain_dir $toolchain_arm64_dir $new_version
 
       - name: Upload Artifacts arm64
@@ -49,7 +49,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: toolchain-aarch64
-          path: x-toolchain-${{ env.new_version }}-aarch64.zip
+          path: $tool_arm64_zip
 
 
       - name: Create Release
@@ -78,6 +78,7 @@ jobs:
   build-arm:
     runs-on: ubuntu-24.04-arm
     needs: build
+    if: false
     steps:
       - name: "set env"
         run: |
