--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           name: toolchain-x86_64
           path: tool_x86_64_zip
+          compression-level: 0
 
       - name: build-arm64
         if: true
@@ -49,7 +50,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: toolchain-aarch64
-          path: $tool_arm64_zip
+          path: $
+          compression-level: 0
 
 
       - name: Create Release
